@@ -12,8 +12,8 @@ extern char szBuildDate[];
 #define MUX_BUILD_DATE szBuildDate
 #endif // MUX_BUILD_DATE
 
-#define MUX_VERSION       "2.6.5.31"         // Version number
-#define MUX_RELEASE_DATE  "2009-DEC-03"      // Source release date
+#define MUX_VERSION       "2.6.5.32"         // Version number
+#define MUX_RELEASE_DATE  "2010-APR-25"      // Source release date
     
 // Define if this release is qualified as ALPHA or BETA.
 //
